now using cuoreui :) optimizations better error handling more user friendly help messages

--- a/GeometryDash Position Changer/GeometryDash Position Changer.csproj
+++ b/GeometryDash Position Changer/GeometryDash Position Changer.csproj
@@ -86,5 +86,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\green.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\red.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
